Fixed version checking