@@ -20,11 +20,12 @@ do
 done
 
 # Currently buggy opening a console
-python3 burp_updater.py
+$detected_term -e python3 burp_updater.py
 
 cd $(ls | grep burpsuite)
 
 loader=$(ls | grep oader)
 burp=$(ls | grep burpsuite)
 
-java -javaagent:$loader -noverify -jar $burp &> /dev/null &
+# java -javaagent:$loader -noverify -jar $burp &> /dev/null &
+java --add-opens=java.desktop/javax.swing=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED --add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED --add-opens=java.base/jdk.internal.org.objectweb.asm.Opcodes=ALL-UNNAMED -javaagent:$loader -noverify -jar $burp
